Fixed visual issue with workaround (this solution took wayyyyy too long to find, glad it worked)

--- a/modules/ComponentsLibrary/PrintTable/styles.css
+++ b/modules/ComponentsLibrary/PrintTable/styles.css
@@ -4,6 +4,7 @@
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 8px;
+  break-inside: avoid;
 }
 
 .PrintTable,
